--- a/scss/pages/build-a-brace/_build-a-brace.scss
+++ b/scss/pages/build-a-brace/_build-a-brace.scss
@@ -73,6 +73,7 @@
 	#coat-color {
 		img {
 			max-width: 100px;
+			width: 100%;
 		}
 	}
 
